syntax = "proto3";

package com.ben.grpc.utils;

option java_multiple_files = true;

enum WriteStatus {

  SUCCEEDED = 0;

  FAILED = 1;

}

message CustomError {

  string errorCode = 1;

  string message = 2;

}